Need a way to correct the width calculation on mobile phones

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 html {
   font-size: 16px;
-  overflow: hidden;
 }
 @media (min-width: 480px) {
   html {
